--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,11 +1,31 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <div class="field">
+    <%= f.label :title, 'Song Title:' %><br>
+    <%= f.text_field :title %>
+  </div>
 
+  <div class="field">
+    <%= f.label :artist_name, 'Artist:' %><br>
+    <%= f.text_field :artist_name %>
+  </div>
+  
+ <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+
+  <input name="song[note_contents][]" id="song_notes_1">
+  <input name="song[note_contents][]" id="song_notes_2">
+  <input name="song[note_contents][]" id="song_notes_3">
+   <input type="submit" value="Submit">
+
+
+
+<div class="actions">
   <%= f.submit %>
+  </div>
 <% end %>
+
+
+
 
 
